# Work-Projects

arraytool/: Cargo.toml
arraytool/src/: main.rs
async_chat/: Cargo.toml
async_chat/src/: main.rs
cairo/: Cargo.toml
cairo-draw_on_jpeg/: Cargo.toml
cairo-draw_on_jpeg/src/: main.rs
dequeue-bad/: Cargo.toml
dequeue-bad/src/: main.rs
gps_to_srt/: gst-launch-readme.txt  jsob_to_sub.py  json_to_sub.py  subtitles.srt  test.py  test.srt
gst-buffer_mutation/: Cargo.toml
gst-draw_on_video/: Cargo.toml
gst-draw_on_video/src/: cairo.rs  draw_lib.rs  lib.rs  main.rs  pangocairo.rs
gst-play_pause/: Cargo.toml
gst-play_pause/src/: other_sol.rs
gst-plugin/: Cargo.toml
gst-plugin/src/: lib.rs  rgb2gray.rs
io/: Cargo.toml
io/src/: main.rs  other_sol.rs
mqtt/: Cargo.toml
mqtt/src/: codec.rs  main.rs
mut_buffer/: Cargo.toml
mut_buffer/src/: main.rs
overlaycomp/: Cargo.toml
overlaycomp/src/: buf.rs  cairo.rs  main.rs  pangocairo.rs
python-mqtt/: await.py  mqtt-client-final-rev1.py  mqtt-client.py  old-mqtt-publish.py  old-publish-mqtt.py  old-subscribe-mqtt.py  string_test.py
rusic/: Cargo.toml
rusic/src/: main.rs  playlist.rs  rusic.rs  toolbar.rs
scripts/: gps.json  gst-launch-readme.txt  json_to_sub.py
signalling_server/: asynctest.py  websocket_cli.py  websocket_cli_2.py  websocket_srv.py
stack-bad/: Cargo.toml
stack-bad/src/: main.rs
stack-ok/: Cargo.toml
stack-ok/src/: main.rs
stack-persistent/: Cargo.toml
stack-persistent/src/: main.rs
tetris/: Cargo.toml
tetris/src/: main.rs
