[package]
name = "cairo-draw_on_jpeg"
version = "0.1.0"
authors = ["Muhammad Hassan <hassanmuhammad221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "*"
cairo-rs = { version = "*", features = ["png"]}
