[package]
name = "vid_overlay"
version = "0.1.0"
authors = ["Muhammad Hassan <muhammad.hassan@hyperdatacomputing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "*"
anyhow = "*"
derive_more = "*"
pango = "*"
cairo-rs = {version="*", features=["png"]}
cairo-sys-rs = "*"
pangocairo = "*"
glib = "*"
gst = {package = "gstreamer", version = "*"}
gst_video = {package = "gstreamer-video", version = "*"}


[[bin]]

name = "overlaycomp"
path = "src/main.rs"

[[bin]]
name = "pangocairo"
path = "src/pangocairo.rs"

[[bin]]
name = "buf"
path = "src/buf.rs"

[[bin]]
name = "cairo"
path = "src/cairo.rs"

[[bin]]
name = "main"
path = "src/main.rs"