[package]
name = "gst_play-pause"
version = "0.1.0"
authors = ["Muhammad Hassan <muhammad.hassan@hyperdatacomputing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "*"
glib = "*"

[[bin]]
name = "other"
path = "src/other_sol.rs"

[[bin]]
name = "main"
path = "src/main.rs"
