[package]
name = "io"
version = "0.1.0"
authors = ["hassa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "*"
glib = "*"

[[bin]]
name = "other"
path = "src/other_sol.rs"

[[bin]]
name = "main"
path = "src/main.rs"
