[package]
name = "azul"
version = "0.1.0"
authors = ["Muhammad Hassan <hassanmuhammad221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.3"
gdk-pixbuf = "0.9.0"
id3 = "0.5.1"

[[bin]]
name = "clickme"
path = "src/clickme.rs"

[[bin]]
name = "firstapp"
path ="src/firstapp.rs"

[[bin]]
name = "music"
path = "src/music.rs"

# [libraries]
# name = "toolbar"
# path = "src/toolbar.rs"